# lib-dt-apriltags

./: README.md  setup.cfg  setup.py
dt_apriltags/: __init__.py  apriltags.py
test/: requirements.txt  test.py
