[metadata]
name = dt_apriltags
url = https://github.com/duckietown/lib-dt-apriltags
author = Aleksandar Petrov
author_email = alpetrov@ethz.ch
description = Python bindings for the Apriltags library
long_description =
    dt_apriltags: Python bindings for the Apriltags library
    =======================================================

    These are Python bindings for the
    `Apriltags <https://github.com/AprilRobotics/apriltags>`__ library
    developed by `AprilRobotics <https://april.eecs.umich.edu/>`__. Inspired
    by the `Apriltags2 bindings <https://github.com/swatbotics/apriltag>`__
    by `Matt Zucker <https://github.com/mzucker>`__.

    The original library is published with a `BSD 2-Clause
    license <https://github.com/AprilRobotics/apriltag/blob/master/LICENSE.md>`__.

    You can find more information on how to use this library in the
    GitHub `repository <https://github.com/duckietown/dt-apriltags>`_.

[options]
install_requires =
    numpy
    dataclasses; python_version < "3.7"
packages = dt_apriltags
include_package_data = true
